--- a/resource/css/admin.css
+++ b/resource/css/admin.css
@@ -81,15 +81,8 @@ background-repeat:no-repeat; */
 .table {
     margin-top: 50px;
 }
-.btn {
-    width: 100px;
-    height: 50px;
-    background-color: #251f70;
-    border: #251f70;
-    border-radius:10px;
-}
 
-.btn1 {
+.btn {
     width: 60px;
     height: 40px;
     margin:2px;
@@ -97,6 +90,10 @@ background-repeat:no-repeat; */
     border: #f04e98;
     border-radius:10px;
     font-weight: 500;   
+}
+
+a {
+    text-align:center;
 }
 
 .btn2 {
@@ -109,10 +106,7 @@ background-repeat:no-repeat; */
     font-weight: 500;
     color: #f5f5f5;
     text-decoration: none;
-}
-.btn2:hover {
-    text-decoration: none;
-    color:#f5f5f5;
+
     
     
 }
