--- a/resource/css/register.css
+++ b/resource/css/register.css
@@ -16,13 +16,13 @@ html {
 
 }
 
-/* header{
+header{
 min-height: 100vh;
 background-image: url(../img/bg.jpg);
 background-size: cover;
 background-position: center;
 background-repeat:no-repeat;
-} */
+}
 
 @media only screen and (max-width: 992px) {
     .form-group {  
