--- a/resource/css/register.css
+++ b/resource/css/register.css
@@ -18,7 +18,7 @@ html {
 
 header{
 min-height: 100vh;
-background-image: url(../img/bg.jpg);
+background-color:#222831;
 background-size: cover;
 background-position: center;
 background-repeat:no-repeat;
@@ -44,7 +44,7 @@ background-repeat:no-repeat;
 }
 
 .navbar{ 
-    background-color:#000000;
+    background-color:transparent;
     opacity: 0.6;
     
 }
@@ -103,15 +103,37 @@ background-repeat:no-repeat;
     text-transform:uppercase;
     font-weight: 500;
     background-color:#f04e98; 
+    margin-bottom: 10px;
+    font-size: 15px;
+    width: 250px;
+    font-weight: 700;
+}
+
+.btn1 {
+    display: inline-block;
+    border-radius: 15px;
+    margin: 0 auto;
+    color:#151515;
+    text-transform:uppercase;
+    font-weight: 500;
+    background-color:transparent; 
     margin-bottom: 3px;
     font-size: 15px;
     width: 250px;
     font-weight: 700;
 }
+
 .btn:hover {
     background-color: #251f70;
+
 }
-        
+ 
+.btn1:hover {
+    text-decoration: none;  
+    border:2px solid #251f70;
+    transition: 0.1s ease-in;  
+    transition-duration: 0.5s;
+}
 
 .header-title {
     font-size: 30px;
@@ -122,6 +144,8 @@ background-repeat:no-repeat;
     margin-top: 35px;   
     color:#f5f5f5;
     border-radius: 20px;
+    
+
 }
 
 .container {
